[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1"                                          # error handling
rustyline = { version = "17", features = ["derive"] }
trie-rs = "0"
once_cell = "1"
os_pipe = "1"
